# FPAO-CC

./: .gitattributes  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  references.bib  requirements.txt
.github/scripts/: build.py
.github/workflows/: deploy.yml
data/aircraft/: AircraftDB_Custom_Jets.ssv  AircraftDB_Custom_Props.ssv  AircraftDB_Standard.ssv  AircraftDB_Standard_Jets.ssv  AircraftDB_Standard_Props.ssv
notebooks/: AerodynamicEfficiency.py  AircraftCustom.py  AircraftSimplified.py  Atmosphere.py  BivariateOptimization.py  EqualityConstraints.py  FlightConstraints.py  FlightControls.py  Fundamentals.py  Homepage.py  InequalityConstraints.py  MaxAltitude.py  MaxAltitude_Jet.py  MaxAltitude_Prop.py  MaxSpeed.py  MaxSpeed_Jet.py  MaxSpeed_Prop.py  MinDrag.py  MinDrag_Jet.py  MinDrag_Prop.py  MinPower.py  MinPower_Jet.py  MinPower_Prop.py  MinSpeed.py  MinSpeed_Jet_KKT.py  MinSpeed_Jet_MonoAn.py  MinSpeed_Prop_KKT.py  MinimumSpeed_KKT.md  Nomenclature.py  PointPerformance.py  PreambleMethodologies.py  ProblemFormulation.py  Scope.py  UnivariateOptimization.py  _defaults.py  pyproject.toml
notebooks/Models_Library/: AircraftCustom.py  AircraftSimplified.py  Atmosphere.py
notebooks/Optimization_Methodology/: BivariateOptimization.py  EqualityConstraints.py  InequalityConstraints.py  PreambleMethodologies.py  UnivariateOptimization.py
notebooks/Problem_Formulation/: FlightConstraints.py  FlightControls.py  PointPerformance.py
notebooks/Steady_Level_Flight/: MaxAltitude.py  MaxAltitude_Jet.py  MaxAltitude_Prop.py  MaxSpeed.py  MaxSpeed_Jet.py  MaxSpeed_Prop.py  MinDrag.py  MinDrag_Jet.py  MinDrag_Prop.py  MinPower.py  MinPower_Jet.py  MinPower_Prop.py  MinSpeed.py  MinSpeed_Jet.py  MinSpeed_Jet_KKT.py  MinSpeed_Prop.py  MinSpeed_Prop_KKT.py
notebooks/core/: _defaults.py  aircraft.py  atmos.py  plot_utils.py
notebooks/public/: AircraftDB_Custom_Jets.csv  AircraftDB_Custom_Props.csv  AircraftDB_Standard.csv  AircraftDB_Standard.ssv
notebooks/public/T38_Talon/: CD0vsM.csv  CLvsAlpha.csv  DvsM.csv  KvsM.csv  TvsM.csv
templates/: basic.html.j2
